--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
       <div class="buttons">
         <button class="exit-quiz">Exit</button>
-        <button class="continue-quiz">Continue</button>
+        <button class="restart-quiz">Continue</button>
       </div>
     </div>
 
@@ -90,15 +90,22 @@
         <div class="total_question">
           <span
             ><p>1</p>
-            <p>of</p>
-            <p>50</p>
-            Questions</span
+            of 50 Questions</span
           >
         </div>
         <button class="next_btn">Next</button>
       </footer>
     </div>
     <!-- Results page -->
-    <div></div>
+    <div class="result_box">
+      <ion-icon class="icon" name="trophy"></ion-icon>
+      <h3 class="completed_quiz"><span>Quiz Completed.</span></h3>
+      <p class="score">You scored <span>1</span> out of 50 questions</p>
+
+      <div class="buttons">
+        <button class="restart-quiz">Restart</button>
+        <button class="exit-quiz">Exit</button>
+      </div>
+    </div>
   </body>
 </html>
