update media queries

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Javascript Quiz App</title>
     <link rel="stylesheet" href="assets/style.css" />
-
+    <link rel="stylesheet" href="assets/media_queries.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,12 +35,12 @@
 
       <div class="info-list">
         <p class="info">
-          1. You have <span>20 seconds</span> for each question
+          1) You have <span>20 seconds</span> for each question
         </p>
-        <p class="info">2. You can only choose one answer</p>
-        <p class="info">3. You can't exit the quiz while you're Playing</p>
-        <p class="info">4. Once time is up you can't chosse answer</p>
-        <p class="info">5. You get points on basis of your correct answers</p>
+        <p class="info">2) You can only choose one answer</p>
+        <p class="info">3) You can't exit the quiz while you're Playing</p>
+        <p class="info">4) Once time is up you can't chosse answer</p>
+        <p class="info">5) You get points on basis of your correct answers</p>
       </div>
       <div class="buttons">
         <button class="exit-quiz">Exit</button>
