update javascript code

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
     <div class="start_quiz">
       <h1>Welcome to the <span>Javascript Quiz!</span></h1>
       <button>Start Quiz</button>
+      <div class="project_by">
+        <p>
+          Built By
+          <span
+            ><a href="https://github.com/Oluwa-Laughter">Isaac Makinde</a></span
+          >
+        </p>
+      </div>
     </div>
 
     <!-- Instructions Page -->
@@ -37,14 +45,14 @@
         <p class="info">
           1) You have <span>20 seconds</span> for each question
         </p>
-        <p class="info">2) You can only choose one answer</p>
-        <p class="info">3) You can't exit the quiz while you're Playing</p>
-        <p class="info">4) Once time is up you can't chosse answer</p>
-        <p class="info">5) You get points on basis of your correct answers</p>
+        <p class="info">2) You can only choose one answer.</p>
+        <p class="info">3) You can't exit the quiz when you start.</p>
+        <p class="info">4) Once time is up you can't choose answer</p>
+        <p class="info">5) You get points for every correct answers.</p>
       </div>
       <div class="buttons">
         <button class="exit-quiz">Exit</button>
-        <button class="restart-quiz">Continue</button>
+        <button class="continue-quiz">Continue</button>
       </div>
     </div>
 
@@ -107,5 +115,8 @@
         <button class="exit-quiz">Exit</button>
       </div>
     </div>
+
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/questions.js"></script>
   </body>
 </html>
