--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+
+    <script type="module" src="assets/js/script.js"></script>
   </head>
   <body>
     <!-- Welcome Page -->
@@ -77,13 +79,13 @@
 
           <div class="option">
             <span>An international language</span>
-            <ion-icon class="icon wrong" name="close-circle-outline"></ion-icon>
+            <ion-icon class="icon-wrong" name="close-circle-outline"></ion-icon>
           </div>
 
           <div class="option">
             <span>A programming language</span>
             <ion-icon
-              class="icon correct"
+              class="icon-correct"
               name="checkmark-done-circle-outline"
             ></ion-icon>
           </div>
@@ -115,8 +117,5 @@
         <button class="exit-quiz">Exit</button>
       </div>
     </div>
-
-    <script src="assets/js/script.js"></script>
-    <script src="assets/js/questions.js"></script>
   </body>
 </html>
