update result , ReadMe and some  fixes

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <p class="info">2) You can only choose one answer.</p>
         <p class="info">3) You can't exit the quiz when you start.</p>
         <p class="info">
-          4) You have to choose an answer in other to move to the next
-          questions.
+          4) You have to choose an answer in other to move to the next questions
+          else you restart.
         </p>
         <p class="info">
           5) Once time is up you won't be able to choose an answer
